updates summaries lesson 48

--- a/my-react-course/course summaries/8.) React Router.md
+++ b/my-react-course/course summaries/8.) React Router.md
@@ -32,7 +32,7 @@ app.get('/*', function(req, res) {
     historyApiFallback: true,
   },
 ```
-
+# Example React Router Basic
 # main.js 
 ```JS
 import React from 'react';
@@ -130,4 +130,188 @@ import React from 'react';
 export default function Users() {
     return <h2>Users</h2>;
 }
+```
+
+<div dir = "rtl">
+  <h1>   שינוי נתיב יזום עם אלמנט Redirect  </h1>
+  <p>
+  בעבודה עם נתב צד-לקוח הרבה פעמים אנחנו רוצים בצורה תכנותית מתוך האפליקציה לשלוח את המשתמש לדף אחר. בשיעור זה נראה איך להשתמש באלמנט Redirect כדי לבנות הנתהגות זו.
+  אם במקום להחזיר אלמנט div אחזיר אלמנט Redirect, באופן אוטומטי ריאקט ראוטר ינתב אותי מחדש לעמוד שבחרתי. 
+  </p>
+  <p>
+  פיצ'ר נחמד נוסף של Redirect הוא היכולת להוסיף הודעה או כל אוביקט אחר שיישלח לנתיב שמקבל את ההפניה, וכך נוכל בנתיב הראשי להציג למשתמש הודעה שאומרת שהוא חייב לבחור קודם שם משתמש.
+
+בצד של ה Redirect נעביר בשדה to אוביקט: המפתח pathname שלו יכיל את הנתיב אליו אנחנו רוצים לעבור, והמפתח state יכיל אוביקט שילווה את תהליך הניווט:
+ה State הוא ממש חלק מהנתיב ונשמר בדפדפן. אחרי ניווט אנחנו יכולים לשלוף את הסטייט הזה דרך המשתנה הגלובאלי window.history.state, אבל בדרך כלל מה שנעשה זה להשתמש שוב ב React Router.
+
+פונקציית Higher Order Component של React Router בשם withRouter תעביר מידע לגבי הניתוב לכל פקד שנבחר, ובעצם תהפוך את הפקד שבחרנו לפקד שמכיר את פרמטרי הנתיב. נכתוב ב main פקד חדש בשם Flash שיידע להציג את המפתח flash מתוך אוביקט הניווט באופן הבא:
+  </p>
+</div>
+
+```JS
+const Flash = withRouter(function Flash(props) {
+  const { state } = props.location;
+  if (state && state.flash) {
+    return <p>{state.flash}</p>
+  }
+  return false;
+});
+```
+<div dir="rtl">
+שילוב אלמנט ה Flash בעמוד יציג את הודעת הפלאש מהניווט האחרון. אני אוהב לשלב אלמנט כזה במקום שיופיע תמיד כלומר לא בתוך Route.
+שימו לב שמרגע שבחרתם Location State הוא יישאר כחלק מהגדרת הנתיב גם אם תטענו מחדש את העמוד בדפדפן. הדרך היחידה לנקות אותו היא פקודת ה JavaScript:
+window.history.replaceState({}, '')
+</div>
+<div dir="rtl">
+מנגנון ניווט אחרון ששווה להכיר הוא ניווט יזום אחרי פעולה אסינכרונית. במנגנון זה נשתמש לדוגמא אם נרצה לשמור את שם המשתמש לשרת ורק אחרי השמירה להמשיך ולנווט לדף הבא. הפיתרון במצב כזה הוא שימוש באותו Higher Order Component שנקרא withRouter מהדוגמא הקודמת, אבל הפעם בצורה קצת שונה:
+
+הפעלת withRouter נותנת לקומפוננטה שלנו אוביקט בשם history.
+
+הפונקציה history.push אחראית על מעבר נתיב ואפשר להפעיל אותה מתוך קוד הפקד.
+
+בשביל לנווט מתוך Redux Action נעביר את אוביקט ה history בתור פרמטר ל Action.
+
+לכן בעבודה מחוץ ל Redux אפשר להשתמש ב History Object מתוך כל useEffect רגיל שלכם. בעבודה מתוך Redux פשוט נעביר את אוביקט ההיסטוריה והפעולה תשתמש באוביקט זה כדי לעבור דף.
+</div>
+
+# Example React Router with Redirect:
+
+# main.js
+```JS
+import React from 'react';
+import ReactDOM from 'react-dom';
+import { Provider } from 'react-redux';
+import { BrowserRouter as Router, Route, } from "react-router-dom";
+
+import Flash from './flash';
+import Login from './login';
+import User from './user';
+import store from './redux/store';
+
+
+export default function App() {
+  return (
+    <Provider store={store}>
+      <Router>
+            <Flash/>
+            <Route path="/" exact component = {Login}/>
+            <Route path="/user" component= {User} />
+      </Router>
+    </Provider>
+  );
+}
+
+// main.js
+const root = document.querySelector('main');
+ReactDOM.render(<App />, root);
+```
+
+# login.js
+```JS
+import React from 'react';
+import { connect } from 'react-redux';
+import { Link, withRouter } from 'react-router-dom';
+import { setUsername } from './redux/actions';
+
+function mapStateToProps(state) {
+  return { username: state.username };
+}
+
+export default withRouter(connect(mapStateToProps)(function Login(props) {
+  const { username , dispatch , history} = props;
+
+  function handleChange(e) {
+    dispatch(setUsername(e.target.value));
+  }
+
+  function onClickHandler() {
+    if(username.startsWith('a')) {
+      history.push('/user');
+    }
+  }
+
+  return (
+    <div>
+      <label>
+        Please select a user name: 
+        <input type="text" value={username} onChange={handleChange} />
+        <button type="button" onClick={onClickHandler}>Next</button>
+      </label>
+      <Link to="/user">Next</Link>
+    </div>
+  );
+}));
+
+```
+
+# user.js
+```JS
+import React from 'react';
+import { connect } from 'react-redux';
+import { Link, Redirect } from 'react-router-dom';
+
+function mapStateToProps(state) {
+  return { username: state.username };
+}
+
+export default connect(mapStateToProps)(function User(props) {
+  const { username } = props;
+
+  if(!username || username.length === 0) {
+    return <Redirect to = {{ pathname: "/" , state: {flash:"Missing user name"}}}/>
+  }
+
+  return (
+    <div>
+      <p>Hello {username}</p>
+      <Link to="/">Return to login </Link>
+    </div>
+  );
+});
+
+```
+# flash.js
+```JS
+import React from 'react';
+import { withRouter } from 'react-router-dom';
+
+export default withRouter(function Flash(props) {
+    const { state  } = props.location;
+    if(state && state.flash) {
+        return (
+            <div>
+                {state.flash}
+            </div>
+        );
+    } else {
+        return false;
+    }
+ 
+});
+```
+
+# actions.js
+```JS
+export function setUsername(username) {
+  return { type: 'SET_USERNAME', payload: username };
+}
+```
+# store.JS
+```JS
+import { createStore } from 'redux';
+import produce from 'immer';
+
+const initialState = {
+  username: '',
+};
+
+const reducer = produce((state, action) => {
+  switch(action.type) {
+    case 'SET_USERNAME':
+      state.username = action.payload;
+  }
+}, initialState);
+
+export default createStore(reducer);
+
 ```
