updates summaries lesson 48

--- a/my-react-course/course summaries/8.) React Router.md
+++ b/my-react-course/course summaries/8.) React Router.md
@@ -211,7 +211,7 @@ ReactDOM.render(<App />, root);
 import React from 'react';
 import { connect } from 'react-redux';
 import { Link, withRouter } from 'react-router-dom';
-import { setUsername } from './redux/actions';
+import { setUsername , saveUsername } from './redux/actions';
 
 function mapStateToProps(state) {
   return { username: state.username };
@@ -226,7 +226,7 @@ export default withRouter(connect(mapStateToProps)(function Login(props) {
 
   function onClickHandler() {
     if(username.startsWith('a')) {
-      history.push('/user');
+      dispatch(saveUsername(history));
     }
   }
 
@@ -241,6 +241,7 @@ export default withRouter(connect(mapStateToProps)(function Login(props) {
     </div>
   );
 }));
+
 
 ```
 
@@ -295,10 +296,21 @@ export default withRouter(function Flash(props) {
 export function setUsername(username) {
   return { type: 'SET_USERNAME', payload: username };
 }
+
+export function saveUsername(history) {
+  return function(dispatch, getState) {
+    // do something async - for example write to server
+    setTimeout(function() {
+      // when done - navigate
+      history.push('/user');
+    }, 1000);
+  }
+}
 ```
 # store.JS
 ```JS
-import { createStore } from 'redux';
+import { createStore, applyMiddleware } from 'redux';
+import thunk from 'redux-thunk';
 import produce from 'immer';
 
 const initialState = {
@@ -312,6 +324,6 @@ const reducer = produce((state, action) => {
   }
 }, initialState);
 
-export default createStore(reducer);
+export default createStore(reducer, applyMiddleware(thunk));
 
 ```
