updates summaries lesson 49

--- a/my-react-course/course summaries/8.) React Router.md
+++ b/my-react-course/course summaries/8.) React Router.md
@@ -135,7 +135,7 @@ export default function Users() {
 <div dir = "rtl">
   <h1>   שינוי נתיב יזום עם אלמנט Redirect  </h1>
   <p>
-  בעבודה עם נתב צד-לקוח הרבה פעמים אנחנו רוצים בצורה תכנותית מתוך האפליקציה לשלוח את המשתמש לדף אחר. בשיעור זה נראה איך להשתמש באלמנט Redirect כדי לבנות הנתהגות זו.
+  בעבודה עם ניתוב צד-לקוח הרבה פעמים אנחנו רוצים בצורה תכנותית מתוך האפליקציה לשלוח את המשתמש לדף אחר. בשיעור זה נראה איך להשתמש באלמנט Redirect כדי לבנות התנהגות זו.
   אם במקום להחזיר אלמנט div אחזיר אלמנט Redirect, באופן אוטומטי ריאקט ראוטר ינתב אותי מחדש לעמוד שבחרתי. 
   </p>
   <p>
@@ -160,8 +160,12 @@ const Flash = withRouter(function Flash(props) {
 <div dir="rtl">
 שילוב אלמנט ה Flash בעמוד יציג את הודעת הפלאש מהניווט האחרון. אני אוהב לשלב אלמנט כזה במקום שיופיע תמיד כלומר לא בתוך Route.
 שימו לב שמרגע שבחרתם Location State הוא יישאר כחלק מהגדרת הנתיב גם אם תטענו מחדש את העמוד בדפדפן. הדרך היחידה לנקות אותו היא פקודת ה JavaScript:
-window.history.replaceState({}, '')
 </div>
+
+```JS
+window.history.replaceState({}, '')
+```
+
 <div dir="rtl">
 מנגנון ניווט אחרון ששווה להכיר הוא ניווט יזום אחרי פעולה אסינכרונית. במנגנון זה נשתמש לדוגמא אם נרצה לשמור את שם המשתמש לשרת ורק אחרי השמירה להמשיך ולנווט לדף הבא. הפיתרון במצב כזה הוא שימוש באותו Higher Order Component שנקרא withRouter מהדוגמא הקודמת, אבל הפעם בצורה קצת שונה:
 
@@ -287,7 +291,6 @@ export default withRouter(function Flash(props) {
     } else {
         return false;
     }
- 
 });
 ```
 
@@ -307,7 +310,7 @@ export function saveUsername(history) {
   }
 }
 ```
-# store.JS
+# store.js
 ```JS
 import { createStore, applyMiddleware } from 'redux';
 import thunk from 'redux-thunk';
@@ -326,4 +329,89 @@ const reducer = produce((state, action) => {
 
 export default createStore(reducer, applyMiddleware(thunk));
 
+```
+
+<div dir ="rtl">
+  <h1>שימוש בפרמטרים של הנתיב באמצעות -useParams</h1>
+</div>
+
+# main.js
+```JS
+import React from 'react';
+import ReactDOM from 'react-dom';
+import { BrowserRouter as Router, Route, Link, } from "react-router-dom";
+
+import Menu from './menu';
+import Home from './home';
+import About from './about';
+import Users from './users';
+
+
+export default function App() {
+  return (
+    <Router>
+        <Menu />
+        <Route path="/about" component={About}/>
+        <Route path="/users/:id" component={Users}/>
+        <Route path="/" exact component={Home}/>
+    </Router>
+  );
+}
+
+// main.js
+const root = document.querySelector('main');
+ReactDOM.render(<App />, root);
+```
+# menu.js
+```JS
+import React from 'react';
+import { Link } from 'react-router-dom';
+
+export default function Menu() {
+  return (
+    <nav>
+        <h1>Menu</h1>
+      <ul>
+        <li><Link to="/">Home</Link></li>
+        <li><Link to="/about">About</Link></li>
+        <li><Link to="/users/1">users/1</Link></li>
+        <li><Link to="/users/2">users/2</Link></li>
+        <li><Link to="/users/3">users/3</Link></li>
+      </ul>
+      <h1>-----------------------------</h1>
+    </nav>
+
+  );
+}
+```
+# home.js
+```JS
+import React from 'react';
+
+export default function Home() {
+    return <h2>Home</h2>;
+}
+```
+# about.js
+```JS
+import React from 'react';
+
+export default function About() {
+    return <h2>About</h2>;
+}
+```
+# users.js
+```JS
+import React from 'react';
+import { useParams } from 'react-router-dom';
+
+export default function Users() {
+    const { id } = useParams() ;
+    const users = {
+      1: 'brad',
+      2: 'anna',
+      3: 'clair'
+    };
+    return <h2>Users: {users[id]}</h2>;
+};
 ```
