updates summaries lesson 49

--- a/my-react-course/course summaries/8.) React Router.md
+++ b/my-react-course/course summaries/8.) React Router.md
@@ -339,21 +339,23 @@ export default createStore(reducer, applyMiddleware(thunk));
 ```JS
 import React from 'react';
 import ReactDOM from 'react-dom';
-import { BrowserRouter as Router, Route, Link, } from "react-router-dom";
+import { BrowserRouter as Router, Route } from "react-router-dom";
 
 import Menu from './menu';
 import Home from './home';
 import About from './about';
 import Users from './users';
+import Topics from './topics';
 
 
 export default function App() {
   return (
     <Router>
         <Menu />
+        <Route path="/" exact component={Home}/>
         <Route path="/about" component={About}/>
         <Route path="/users/:id" component={Users}/>
-        <Route path="/" exact component={Home}/>
+        <Route path="/topics" component={Topics} />
     </Router>
   );
 }
@@ -377,6 +379,8 @@ export default function Menu() {
         <li><Link to="/users/1">users/1</Link></li>
         <li><Link to="/users/2">users/2</Link></li>
         <li><Link to="/users/3">users/3</Link></li>
+        <li><Link to="/topics">Topics</Link></li>
+
       </ul>
       <h1>-----------------------------</h1>
     </nav>
@@ -414,4 +418,28 @@ export default function Users() {
     };
     return <h2>Users: {users[id]}</h2>;
 };
+```
+# topics.js
+```JS
+import React from 'react';
+import { Link, Route } from "react-router-dom";
+
+function Topic({ match }) {
+    return <h3>Requested Param: {match.params.id}</h3>;
+}
+  
+export default function Topics({ match }) {
+
+    return (
+      <div>
+        <h2>Topics</h2>
+        <ul>
+          <li> <Link to={`${match.url}/components`}>Components</Link> </li>
+          <li> <Link to={`${match.url}/props-v-state`}>Props v. State</Link> </li>
+        </ul>
+        <Route path={`${match.path}/:id`} component={Topic} />
+        <Route exact path={match.path} render={() => <h3>Please select a topic.</h3>}/>
+      </div>
+    );
+}
 ```
