updates summaries lesson 49

--- a/my-react-course/course summaries/8.) React Router.md
+++ b/my-react-course/course summaries/8.) React Router.md
@@ -333,7 +333,29 @@ export default createStore(reducer, applyMiddleware(thunk));
 
 <div dir ="rtl">
   <h1>שימוש בפרמטרים של הנתיב באמצעות -useParams</h1>
+  <p>
+    ב React Router אנחנו מגדירים נתיב עם פרמטר באמצעות נקדודותיים, כך הנתיב הבא יתאים לכל ה URL-ים ברשימה למעלה:
+  </P>
 </div>
+
+```JS
+    <Route path={`${match.path}/:id`} component={Topic} />
+    //יתאים לזה
+    <Link to={`${match.url}/components`}>Components</Link>
+    //ולזה
+    <Link to={`${match.url}/props-v-state`}>Props v. State</Link>
+```
+<p>
+   אפשר להשתמש בכמה פרמטרים באותו נתיב כמו לדוגמאL
+</P>
+
+```JS
+    <Route path={`${match.path}/:id/:text`} component={Topic} />
+    //יתאים לזה
+    <Link to={`${match.url}/components/foo`}>Components</Link>
+    //ולזה
+    <Link to={`${match.url}/props-v-state/bar`}>Props v. State</Link>
+```
 
 # main.js
 ```JS
