forms-react-router

--- a/my-react-course/course summaries/4.) What-else-does-component-do.md
+++ b/my-react-course/course summaries/4.) What-else-does-component-do.md
@@ -385,7 +385,7 @@ ReactDOM.render(<App />, root);
 
 ```
 
-# 2.) Example for useEffect: starwarsCharacters - youtubePlayer API
+# 2.) Example for useEffect: youtubePlayer API
 ```JS
 
 import React, { useEffect, useRef, useState } from 'react';
