--- a/my-react-course/course summaries/2.) how-to-write-a-component.md
+++ b/my-react-course/course summaries/2.) how-to-write-a-component.md
@@ -6,7 +6,7 @@
   - Passing numbers
   - Passing arrays
   - {...} to object - React create property from each item in object
-  - Note: If passing not srting prop need to put the props inside {}
+  - Note: If passing not string prop need to put the props inside {}
 
 3. Default property values
 
